<resources>
    <string name="app_name">看会片儿</string>
    <string name="input">请输入关键字</string>
    <string name="search">搜索</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">当前：主页</string>
    <string name="record">记录</string>
    <string name="check_download">查看下载</string>
    <string name="download_all">下载全部</string>
    <string name="download">下载缓存</string>
    <string name="downloading">正在下载</string>
    <string name="downloaded">已缓存视频</string>
    <string name="edit">编辑</string>
    <string name="my_download">我的下载</string>
    <string name="click_to_check">点击查看下载进度</string>
    <string name="setting">设置</string>
    <string name="check_all_history">查看所有观看记录</string>
    <string name="remove_all_history">删除所有观看记录</string>
    <string name="all_history">全部记录</string>
    <string name="ensure">确认</string>
    <string name="delete_">确定删除？</string>
    <string name="cancel">取消</string>
    <string name="all_select">全选</string>
    <string name="delete">删除</string>
    <string name="change_theme">修改主题颜色</string>
    <string name="pink">少女粉</string>
    <string name="red">高能红</string>
    <string name="yellow">咸蛋黄</string>
    <string name="green">早苗绿</string>
    <string name="purple">基佬紫</string>
    <string name="blue">宝石蓝</string>
    <string name="split">/</string>
    <string name="speed">倍速</string>
    <string name="_0_5x">0.5X</string>
    <string name="_0_75x">0.75X</string>
    <string name="_1x">1X</string>
    <string name="_1_25x">1.25X</string>
    <string name="_1_75x">1.75X</string>
    <string name="_2x">2X</string>
    <string name="_1_5x">1.5X</string>
</resources>