<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/bottom_container"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:background="@drawable/dkplayer_shape_stardard_controller_bottom_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_play"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:src="@drawable/dkplayer_selector_play_button" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:max="1000"
            android:maxHeight="4dp"
            android:minHeight="4dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:progressDrawable="@drawable/seekbar_progress_bar"
            android:thumb="@drawable/seekbar_thumb"
            android:thumbOffset="0dp" />

        <TextView
            android:id="@+id/curr_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="11sp"
            tools:text="00:00" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/split"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="11sp"
            tools:text="00:00" />

        <TextView
            android:id="@+id/tvSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:text="@string/speed"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/horizontalFullscreen"
            android:layout_width="40dp"
            android:layout_height="32dp"
            android:padding="5dp"
            android:scaleType="fitXY"
            android:src="@drawable/selector_full_screen_button"
            app:tint="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSpeed"
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:layout_marginBottom="50dp"
        android:background="#C4000000"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/_0_5x"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv75"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/_0_75x"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/_1x"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv125"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/_1_25x"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/_1_5x"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv175"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/_1_75x"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/_2x"
            android:textColor="@color/white" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/bottom_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_gravity="bottom"
        android:max="1000"
        android:progressDrawable="@drawable/progress_bar"
        android:visibility="gone" />

</FrameLayout>